--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Iker Diaz",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.0"
   }
 }
